<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        app:titleTextColor="@color/white"
        app:title="@string/add_issue"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ToolbarTheme" />
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTitle"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/editTextDescription"
            android:gravity="left"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="100dp" />


        <Spinner
            android:id="@+id/issue_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <ImageView
            android:src="@drawable/speak_ic"
            android:id="@+id/problem_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"

            />
        <LinearLayout
            android:layout_marginTop="4dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_upload_galary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/gallery"
                android:layout_height="wrap_content"
                />
            <Button

                android:textAllCaps="false"
                android:text="@string/camara"
                android:id="@+id/button_upload_camara"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <Button

            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:text="@string/report_issue"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
